# rose_lab

./: README.md
install/: local_setup.sh  setup.sh
install/dummy/lib/dummy/: dummy_gantry  dummy_lidar  gantry_capture_service
install/dummy/share/dummy/: package.bash  package.ps1  package.sh  package.xml  package.zsh
install/gantry_lidar_interfaces/include/gantry_lidar_interfaces/gantry_lidar_interfaces/srv/: delete_name.hpp  delete_time_range.h  download_name.h  (+2 more)
install/gantry_lidar_interfaces/share/gantry_lidar_interfaces/: package.sh
install/gantry_lidar_interfaces/share/gantry_lidar_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake
install/gantry_lidar_interfaces/share/gantry_lidar_interfaces/srv/: Capture.json  DeleteName.json  DeleteTimeRange.idl  DeleteTimeRange.json  DownloadName.idl  DownloadName.json  DownloadTimeRange.idl
install/gantry_path/lib/gantry_path/: gantry_capture_service  gantry_command
install/gantry_path/share/gantry_path/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros/src/dummy/: package.xml  setup.py
ros/src/dummy/dummy/: dummy_gantry.py  dummy_lidar.py  dummy_service.py
ros/src/dummy/launch/: launch_dummy.py
ros/src/lidar_gui/: package.xml  setup.cfg  setup.py
ros/src/lidar_gui/lidar_gui/: gui_main.py  perception_gui.py  trajectory_mapper.py
ros/src/path_mapper/: CMakeLists.txt  compile_commands.json  package.xml
ros/src/path_mapper/include/path_mapper/: path_map.h
ros/src/path_mapper/src/: path_main.cpp  path_map.cpp
src/dummy/: setup.py
(+36 files in other folders)
